src/objects/C501_Merge_Metric__c.object
<CustomObject>
    <fields>
        <fullName>AutoMerge_Objects__c</fullName>
        <description>Auto-Merge Object(s) is a list of objects allowed to merge during auto-merge process.</description>
        <inlineHelpText>Auto-Merge Object(s) is a list of objects allowed to merge during auto-merge process.</inlineHelpText>
        <label>Auto-Merge Object(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contacts_Within_Account</fullName>
                </value>
                <value>
                    <fullName>Contacts_Across_Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoMerge_Percentage__c</fullName>
        <defaultValue>100.0</defaultValue>
        <description>Automerge Percentage to use when determining the threshold to automatically merge any merge candidates.  Automerging happens when the Automerge Percentage is less than or equal to the merge candidate confidence percentage.</description>
        <inlineHelpText>Percent value when a merge candidate is automatically merged.</inlineHelpText>
        <label>AutoMerge Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <defaultValue>90.0</defaultValue>
        <description>Initial confidence percentage for merge candidates found by the merge rule.</description>
        <inlineHelpText>Default merge candidate confidence percentage</inlineHelpText>
        <label>Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discover_AutoMerge_Objects_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only discover potential merge candidates based on the auto-merge object(s) selected.</description>
        <inlineHelpText>Only discover potential merge candidates based on the auto-merge object(s) selected.</inlineHelpText>
        <label>Auto-Merge Object(s) Discovery Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Objects__c</fullName>
        <description>List of objects to look for during discovery.</description>
        <inlineHelpText>List of objects to look for during discovery.</inlineHelpText>
        <label>Discovery Object(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contacts_Within_Account</fullName>
                </value>
                <value>
                    <fullName>Contacts_Across_Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_Account_Merge_Discovery__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When enabled, background processing will attempt to discover account merge candidates.</description>
        <inlineHelpText>When enabled, background processing will attempt to discover account merge candidates.</inlineHelpText>
        <label>Enable Account Merge Discovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Contact_Merge_Discovery__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When enabled, background processing will attempt to discover contact merge candidates.</description>
        <inlineHelpText>When enabled, background processing will attempt to discover contact merge candidates.</inlineHelpText>
        <label>Enable Contact Merge Discovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Account_Discover_GroupByHavingCount__c</fullName>
        <description>Used to reference the last having count for discover</description>
        <inlineHelpText>Used to reference the last having count for discover</inlineHelpText>
        <label>Last Account Discover GroupByHavingCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Discover_GroupByHavingCount__c</fullName>
        <description>Used to reference the last having count for contact discover</description>
        <inlineHelpText>Used to reference the last having count for contact discover</inlineHelpText>
        <label>Last Contact Discover GroupByHavingCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_ContactsAccount_Discover_Date__c</fullName>
        <label>Last ContactsAccount Discover Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_ContactsAccounts_Discover_Date__c</fullName>
        <label>Last ContactsAccounts Discover Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_ContactsAcross_Discover_HavingCount__c</fullName>
        <label>Last ContactsAcross Discover HavingCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Discover_Date__c</fullName>
        <label>Last Account Discover Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Merge_Date__c</fullName>
        <label>Last Merge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_Object_Account_Id__c</fullName>
        <description>Relationship Path from Primary Object to Account Id (e.g., Primary Object = Account then path is Id, Primary Object = Contact then path is AccountId)</description>
        <inlineHelpText>Relationship Path from Primary Object to Account Id (e.g., Primary Object = Account then path is Id, Primary Object = Contact then path is AccountId)</inlineHelpText>
        <label>Relationship Path to Account Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_Contact_Id__c</fullName>
        <description>Relationship Path from Primary Object to Contact Id (e.g., Primary Object = Account then path is Not Available because 1-to-Many Relationship, Primary Object = Contact then path is Id)</description>
        <inlineHelpText>Relationship Path from Primary Object to Contact Id (e.g., Primary Object = Account then path is Not Available because 1-to-Many Relationship, Primary Object = Contact then path is Id)</inlineHelpText>
        <label>Relationship Path to Contact Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <description>Name of the primary object for the report used as the merge candidate criteria.</description>
        <inlineHelpText>Name of the primary object (e.g., Contact, Account) for the report used as the merge candidate criteria.</inlineHelpText>
        <label>Report Primary Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Report_LastModifiedDate__c</fullName>
        <label>Source Report LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_Report__c</fullName>
        <description>Report Unique Name used as the merge candidate criteria for this merge rule</description>
        <inlineHelpText>Report Unique Name used as the merge candidate criteria for this merge rule</inlineHelpText>
        <label>Report Unique Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Ignore__c</fullName>
        <label>Total Ignore</label>
        <summaryFilterItems>
            <field>C501_Account_Merge__c.Merge_Action__c</field>
            <operation>equals</operation>
            <value>Ignore</value>
        </summaryFilterItems>
        <summaryForeignKey>C501_Account_Merge__c.Merge_Metric__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Unassigned_Accounts__c</fullName>
        <description>Total number of account merge candidate pairs.  Merge candidates are discovered in groups of 2 related accounts based on the report criteria.</description>
        <inlineHelpText>Total number of account merge candidate pairs.  Merge candidates are discovered in groups of 2 related accounts based on the report criteria.</inlineHelpText>
        <label>Total Account Merge Candidate Pairs</label>
        <summaryFilterItems>
            <field>C501_Account_Merge__c.Merge_Action__c</field>
            <operation>notEqual</operation>
            <value>Ignore</value>
        </summaryFilterItems>
        <summaryForeignKey>C501_Account_Merge__c.Merge_Metric__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Unassigned_Contacts__c</fullName>
        <description>Total number of contact merge candidate pairs.  Merge candidates are discovered in groups of 2 related contacts based on the report criteria.</description>
        <inlineHelpText>Total number of contact merge candidate pairs.  Merge candidates are discovered in groups of 2 related contacts based on the report criteria.</inlineHelpText>
        <label>Total Contact Merge Candidate Pairs</label>
        <summaryFilterItems>
            <field>C501_Contact_Merge__c.Merge_Action__c</field>
            <operation>notEqual</operation>
            <value>Ignore</value>
        </summaryFilterItems>
        <summaryForeignKey>C501_Contact_Merge__c.Merge_Metric__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Merge Metric</label>
    <listViews>
        <fullName>All_Metrics</fullName>
        <columns>NAME</columns>
        <columns>Total_Unassigned_Accounts__c</columns>
        <columns>Total_Unassigned_Contacts__c</columns>
        <columns>Total_Ignore__c</columns>
        <columns>Discovery_Objects__c</columns>
        <columns>AutoMerge_Objects__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Metrics</label>
    </listViews>
    <nameField>
        <label>Merge Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>